--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,115 @@
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 480px) {
+  #menu {
+    width: 480px;
+  }
+  #header .overlay {
+    width: 480px;
+  }
+  #header .heading-title {
+    font-size: 30px;
+  }
   #features {
     padding: 20px;
-    width: 111%;
+    width: 480px;
+  }
+  #features .featuresImg {
+    float: left;
+    margin-right: 35px;
+  }
+  #features .featuresImg img {
+    width: 120px;
+    height: 120px;
+  }
+  #features  .features_content{
+    float: none;
+    padding-bottom: 35px;
+  }
+  #features h3 {
+    text-align: justify;
+  }
+  #features .text-black {
+    color: #000 !important; 
+    text-align: justify; 
+    width: 100%;
   }
   #about,
-  #services,
-  #testimonials,
-  #team,
   #contact,
   #footer {
+    width: 480px;
+    padding: 0px;
+  }
+  #services {
     width: 111%;
+    height: 500px;
+    display: inline;
+  }
+  #services .container {
+    padding: 0px;
+  }
+  #services .service_content .service-style1__title{
+    background-color: #000;
+    width: 480px;
+  }
+  #services .service_content .service-style1__title .image_holder_box {
+    display: inline-block;
+  }
+  #services .service_style {
+    margin: 5px 0px;
+  }
+  #portfolio {
+    padding: 30px 0px;
+  }
+  #portfolio .portfolio-item {
+    width: 480px;
+  }
+  #footer .social {
+    justify-content: center;
+    float: none;
+    margin-left: 10%;
   }
 
-  #portfolio {
-    width: 110%;
+}
+
+@media (min-width: 767px) and (max-width: 1024px) {
+  #services {
+    width: 68%;
+  }
+  #services .service_content{
+   display: flex;   
+  }
+  #services .service_style{
+    height: auto;
+    padding: 12px;
+  }
+  #services .service_rightcontent {
+    margin-left: 30%;
+  }
+  #features .featuresImg {
+    float: left;
+    margin-right: 35px;
+  }
+  #features .featuresImg img {
+    width: 120px;
+    height: 120px;
+  }
+  #features  .features_content{
+    float: none;
+    margin-left: 20%;
+    padding-bottom: 35px;
+  }
+  #features h3 {
+    text-align: justify;
+  }
+  #features .text-black {
+    color: #000 !important; 
+    margin-left: 34px; 
+    text-align: justify; 
+    width: 450px;
+  }
+  #footer .social {
+    justify-content: center;
+    float: none;
+    margin-left: 10%;
   }
 }
+
