--- a/public/css/style.css
+++ b/public/css/style.css
@@ -448,7 +448,7 @@ header .intro-text {
 
 /* Contact Section */
 #contact {
-  padding: 30px 0 60px;
+  padding: 0 0 30px 0;
   background: #222;
   color: rgba(255, 255, 255, 0.75);
 }
