--- a/public/css/style.css
+++ b/public/css/style.css
@@ -334,6 +334,7 @@ header .intro-text {
 #services {
   background: #000;
   color: #fff;
+  width: 36%;
 }
 #services .container .row {
   display: flex;
